objects/Customer_Asset__c.object
<CustomObject>
    <fields>
        <fullName>ATGExternalID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID for migration purposes</inlineHelpText>
        <label>ATGExternalID__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Activation_Notification__c</fullName>
        <description>Date and time the activation email sent to customer. Part of Data Services requirement.</description>
        <label>Activation Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Revenue__c</fullName>
        <inlineHelpText>The annual recurring revenue for the product. If product is usage based, ARR is the greater of $0 or the contracted minimum.</inlineHelpText>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox on asset will trigger activation workflow and email alert to customer. Part of Data Services requirement.</description>
        <label>Asset Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <label>Asset Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signed, Not Delivered</fullName>
                    <default>true</default>
                    <label>Signed, Not Delivered</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending Decommission</fullName>
                </value>
                <value>
                    <fullName>Decommissioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <description>This field is created as part of Data services requirement.</description>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Decommission_Effective_Date__c</fullName>
        <description>The effective date to decommission this asset. Used for future dating decommission of assets.</description>
        <inlineHelpText>The effective date to decommission this asset. Used for future dating decommission of assets.</inlineHelpText>
        <label>Decommission Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Product Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <formula>Contract__r.Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <description>The first date the item was fulfilled - populated from OrderItem.NetSuite_Last_Fulfilled_Date__c</description>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Contract_End_Date__c</fullName>
        <description>Field used to expose the Master Contract End Date onto the Customer Asset record. Primarily for Sales to have visibility into how long of a Contract the customer is one.</description>
        <formula>Contract__r.Parent_Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>INFO : This field will tell you the End Date of this Customer's Master Contract with Vertafore.</inlineHelpText>
        <label>Master Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Contract_Start_Date__c</fullName>
        <description>Field used to expose the Master Contract Start Date onto the Customer Asset record.  Primarily for Sales to have visibility into how long of a Contract the customer is one.</description>
        <formula>Contract__r.Parent_Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>INFO : This field will tell you the Start Date of this Customer's Master Contract with Vertafore.</inlineHelpText>
        <label>Master Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Forecast_Number__c</fullName>
        <label>Max Forecast Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrate_Contracted_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migrate Contracted Asset</label>
        <referenceTo>Customer_Asset__c</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Reallocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Reallocation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>This field is updated via Apex code before the record is created. This will pull the email address of the associated opportunity via contract field on the record.</description>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Package_Product_Code__c</fullName>
        <formula>IF(ISNULL(Steelbrick_Subscription__r.SBQQ__RequiredByProduct__c),'', Steelbrick_Subscription__r.SBQQ__RequiredByProduct__r.ProductCode)</formula>
        <label>Package Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Paid_Code__c</fullName>
        <label>Pre Paid Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT( Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Second level of the product hierarchy.</inlineHelpText>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <formula>TEXT( Product__r.Product_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First level of product hierarchy.</inlineHelpText>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>TEXT( Product__r.Product_Line2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Third level of the product hierarchy.</inlineHelpText>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the related product
.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Quantity owned.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steelbrick_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Steelbrick Asset</description>
        <label>Steelbrick Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Steelbrick_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Steelbrick subscription</description>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Customer Assets</relationshipLabel>
        <relationshipName>Customer_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_ARR__c</fullName>
        <formula>Steelbrick_Subscription__r.Annual_Recurring_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Temp ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_One_Time_Fee_s__c</fullName>
        <inlineHelpText>Net price of the related non-recurring product.</inlineHelpText>
        <label>Total One-Time Fee(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>A summarization of the Steelbrick Subscriptions and Steelbrick Assets for the Customer.</description>
    <label>Customer Asset</label>
    <nameField>
        <displayFormat>CA-{0000000}</displayFormat>
        <label>Customer Asset</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Customer_Email_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISBLANK(Customer_Email__c),
Asset_Activation__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Customer_Email__c</errorDisplayField>
        <errorMessage>Please fill the Customer Email</errorMessage>
    </validationRules>
</CustomObject>